--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">PruebaModuloTresApplication</string>
+    <string name="app_name">El Bajón Místico</string>
     <string name="click_boton">click_boton</string>
 </resources>
